--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, user-scable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
@@ -11,8 +11,11 @@
 	<meta name="keywords" content="Peliculas, Cine, Movies, Series">
 	<title>Las Pelícualas más Populares</title>
 	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+	<link rel="stylesheet" href="dispositivos.css">
 </head>
 <body>
+	<img class="logo2" src="img/Arian_b.png" alt="logo-Arian_b">
+	<img class="logo-tm2" src="img/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg" alt="themoviedb">
 	<div class="contenedor" id="contenedor"></div>
 
 	<div class="paginacion">
