--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </head>
 <body>
 	<img class="logo2" src="img/Arian_b.png" alt="logo-Arian_b">
-	<img class="logo-tm2" src="img/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg" alt="themoviedb">
+	<img class="logo-tm2" src="img/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg">
 	<div class="contenedor" id="contenedor"></div>
 
 	<div class="paginacion">
 		<img class="logo" src="img/Arian.png" alt="logo-Arian">
 		<button id="btnAnterior">Anterior</button>
 		<button id="btnSiguiente">Siguiente</button>
-	<img class="logo-tm" src="img/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg" alt="themoviedb">
+	<img class="logo-tm" src="img/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg">
 	</div>
 
 	<script src="app.js"></script>
