--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
 	</div>
 
 	<script src="app.js"></script>
-	<script src="https://arirubmusic.github.io/js/block.js"></script>
+	<!--script src="https://arirubmusic.github.io/js/block.js"></script-->
 </body>
 </html>
