--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="estilos.css">
+	<link rel="canonical" href="https://arianoso.github.io/Las-Pelicualas-mas-Populares/" />
 	<meta name="keywords" content="Peliculas, Cine, Movies, Series">
 	<title>Las Pelícualas más Populares</title>
 	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
