--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, user-scable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<meta name="description" content="Si te preguntáramos cuál fue la mejor película de todos los tiempos... eso daría lugar a una clasificación bastante ajustada de la opinión popular.">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="estilos.css">
