--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 	<div class="paginacion">
 		<img class="logo" src="img/Arian.png" alt="logo-Arian">
+		<a href="https://arianoso.github.io/TV-shows-Populares/" target="_blank" rel="noopener noreferrer" class="pel">TVshows</a>
 		<button id="btnAnterior">Anterior</button>
 		<button id="btnSiguiente">Siguiente</button>
 	<img class="logo-tm" src="img/blue_short-8e7b30f73a4020692ccca9c88bafe5dcb6f8a62a4c6bc55cd9ba82bb2cd95f6c.svg">
