--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
 	<link rel="canonical" href="https://arianoso.github.io/Las-Pelicualas-mas-Populares/" />
 	<meta name="author" content="Arian">
 	<meta name="keywords" content="Peliculas, Cine, Movies, Series">
-	<title>Películas populares</title>
+	<title>Arirub Movies</title>
 	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 </head>
 <body>
 	<header>
-		<div class="contenedor">
+		<div class="contenedorh">
+			<div class="logos">
 			<img src="img/logo.png" class="logoimg" alt="">
-			<h2 class="logotipo">Películas populares</h2>
+			<h2 class="logotipo">Arirub Movies</h2>
+		</div>
 			<nav>
 				<a href="https://arianoso.github.io/TV-shows-Populares/" target="_blank">TV Shows populares</a>
 			</nav>
