--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
 	<script src="app.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="https://jailbreak-update.github.io/jquery/jquery-3.3.1.min.js"></script>	
-	<!--script src="https://arirubmusic.github.io/js/block.js"></!--script-->
+	<script src="https://arirubmusic.github.io/js/block.js"></script>
 </body>
 </html>
