--- a/index.html
+++ b/index.html
@@ -28,13 +28,21 @@
 		</div>
 	</header>
 
+	<div class="section2">
+		<h2>Tendencias</h2>
+	</div>
 		<div class="contenedor" id="contenedor"></div>
+
+		<div class="section">
+		<h2>Populares</h2>
+	</div>
+		<div class="populares" id="populares"></div>
 
 
 	<script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 	<script src="app.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="https://jailbreak-update.github.io/jquery/jquery-3.3.1.min.js"></script>	
-	<script src="https://arirubmusic.github.io/js/block.js"></script>
+	<!--script src="https://arirubmusic.github.io/js/block.js"></!--script-->
 </body>
 </html>
