--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<meta name="keywords" content="Peliculas, Cine, Movies, Series">
 	<title>Arirub Movies</title>
 	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6417469316189149"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 	<header>
